--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 <body>
     <header>
         <h1>Pondok Pesantren Fathul Huda</h1>
-        <p>Jadwal Kegiatan Santri IPNU IPPNU</p>
+        <p>Jadwal Kegiatan Santri</p>
     </header>
 
     <main>
